read bencoded data as bytes instead of string